@@ -3602,6 +3602,7 @@ STR_6493    :This park was saved in a later version of OpenRCT2, some data may b
 STR_6494    :Group by ride type
 STR_6495    :Group rides by ride types instead of showing each vehicle separately.
 STR_6496    :{WINDOW_COLOUR_2}{STRINGID}
+STR_6497    :Click on a tile to show its tile elements.{NEWLINE}Ctrl + click a tile element to select it directly.
 
 #############
 # Scenarios #
